# mSWEEP

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: make_release.yml
config/: CMakeLists-alignment-writer.txt.in  CMakeLists-bxzstr.txt.in  CMakeLists-cxxio.txt.in  CMakeLists-mGEMS.txt.in  CMakeLists-rcgpar.txt.in  CMakeLists-seamat.txt.in  CMakeLists-telescope.txt.in  mSWEEP_mpi_config.hpp.in  mSWEEP_version.h.in  mpi_config.hpp.in  version.h.in
docs/: README.md  compilation.md  example.md  experimental.md  gpubenchmarks.md  gpucompilation.md  pipeline.md  reference.md
example/: clustering.txt
include/: Grouping.hpp  KallistoFiles.hpp  Likelihood.hpp  OutfileDesignator.hpp  Reference.hpp  Sample.hpp  bootstrap.hpp  bootstrap_confints.hpp  likelihood.hpp  log.hpp  mSWEEP.hpp  mSWEEP_alignment.hpp  mSWEEP_io.hpp  mSWEEP_log.hpp  mSWEEP_openmp_config.hpp.in  matrix.hpp  msweep_log.hpp  openmp_config.hpp.in  parse_arguments.hpp  process_reads.hpp  rcg.hpp  read_bitfield.hpp  read_pseudoalignment.hpp  thread_pool.hpp  version.h.in
include/tools/: matchfasta.hpp
src/: BootstrapSample.cpp  Grouping.cpp  OutfileDesignator.cpp  PlainSample.cpp  Reference.cpp  Sample.cpp  bootstrap.cpp  bootstrap_confints.cpp  likelihood.cpp  mSWEEP.cpp  mSWEEP_io.cpp  main.cpp  matrix.cpp  parse_arguments.cpp  process_reads.cpp  rcg.cpp  read_bitfield.cpp  read_pseudoalignment.cpp
src/tools/: main.cpp  matchfasta.cpp
